<resources>

    <string name="app_name">EPicture</string>

    <string name="title_activity_gallery">Gallery</string>

    <string name="title_images">Images</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_upload">Upload</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="GalleryItemDescription">Gallery Item</string>

    <string name="action_login">Login</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_delete">Delete</string>
    <string name="titre_upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="user_profile">Profile</string>
    <string name="Logout_button">Logout</string>
    <string name="search">Search</string>
    <string name="select_all">Select all</string>
    <string name="title">Title</string>

</resources>
